[project]
name = "investapi"
version = "1.2.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "redis>=7.4.0",
    "uvicorn>=0.47.0",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
